kubernetes/apps/rook-ceph/rook-ceph/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ceph
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: infra
      sectionName: websecure
  hostnames: ["ceph.home.mattprovost.dev"]
  rules:
    - backendRefs:
        - group: traefik.io
          kind: TraefikService
          name: ceph-dashboard-https
