kubernetes/apps/rook-ceph/rook-ceph/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ceph-dashboard
spec:
  ingressClassName: traefik
  rules:
    - host: ceph.home.mattprovost.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rook-ceph-mgr-dashboard
                port:
                  number: 7000
