kubernetes/apps/rook-ceph/rook-ceph/tlsroute.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TLSRoute
metadata:
  name: ceph
spec:
  parentRefs:
    - name: traefik-gateway
      namespace: infra
      sectionName: tls-passthrough
  hostnames: ["ceph.home.mattprovost.dev"]
  rules:
    - backendRefs:
        - name: rook-ceph-mgr-dashboard
          port: 8443
